--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -1,10 +1,9 @@
 .navbar {
   background-image: none;
   background-size: cover;
-  background-color: white;
-  min-height: 5em;
+  background-color: rgb(62, 58, 82);
+  min-height: 3em;
   box-shadow: 0 0 5px 0 gray;
-  
 }
 
 .navbar-nav {
@@ -15,6 +14,7 @@
 
 .header-item {
   font-weight: bold;
+  color: white;
 }
 
 .header-logo {
@@ -42,7 +42,7 @@
     background:rgb(62, 58, 82);
     opacity: 0.9;
     box-shadow: 0 0 0 0;
-    height: 2em;
+    height: 5em;
   }
 
   .header-img {
